Fixed others endpoints
